Apps/emqx/service.yaml
# docker run -d --name emqx -p 1883:1883 -p 8083:8083 -p 8084:8084 -p 8883:8883 -p 18083:18083  emqx/emqx-enterprise:5.9.0
apiVersion: v1
kind: Service
metadata:
  labels:
    app: emqx
  name: emqx-service
  namespace: emqx
spec:
  #type: LoadBalancer
  ports:
    - name: "http"
      port: 80
      targetPort: 18083
    - name: "1883"
      port: 1883
      targetPort: 1883
    - name: "8083"
      port: 8083
      targetPort: 8083
    - name: "8084"
      port: 8084
      targetPort: 8084
    - name: "8883"
      port: 8883
      targetPort: 8883
  selector:
    app: emqx
